[package]
name = "tfhe_cpu_gpu_compare"
version = "0.1.0"
edition = "2021"

#[dependencies.tfhe]
#path    = "../tfhe-rs"
#features = ["integer"]

[dependencies]
#tfhe   = { version = "1.3.3", features = ["integer"] } # GPU 기능 켜둠
tfhe   = { path = "../tfhe-rs/tfhe", features = ["integer"] } # GPU 기능 켜둠
bincode = "1.3.3"
base64  = "0.22"
sha2    = "0.10"
hex     = "0.4"

